@@ -16,14 +16,14 @@
     </div>
 
     <div id="content">
-
         <h2>Artifacts</h2>
         <ul>
-            <li><a href="@PROJECT_JAR@">Project Jar File</a></li>
             <li><a href="release/@RELEASE_ZIP@">Release Zip File</a></li>
-            <li><a href="@JAVADC_ZIP@">Javadoc Zip File</a></li>
+            <li><a href="release/@MAVEN_BUNDLE@">Maven Bundle</a></li>
+            <li><a href="@PROJECT_JAR@">Main Jar File</a></li>
+            <li><a href="@SOURCES_JAR@">Source Jar File</a></li>
+            <li><a href="@JAVADOC_JAR@">Javadoc Jar File</a></li>
         </ul>
-
         <h2>Quality</h2>
         <ul>
             <li><a href="coverage/index.html">Spec/test code coverage</a></li>
